# SimpleModManager

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  ModCFW.ini  README.md  devkita64-libnx.cmake  setup_env.sh  version_config.h.in
.github/workflows/: docker-image.yml
assets/: icon_gui.psd
cmake/: FindLIBNX.cmake  borealisLib.cmake  clang-dev-tools.cmake  nx-utils.cmake  options.cmake  utils.cmake
core/: CMakeLists.txt
gui/: CMakeLists.txt
gui/Applications/: CMakeLists.txt
gui/Applications/src/: SimpleModManager.cpp
gui/CoreExtension/: CMakeLists.txt
gui/CoreExtension/include/: GuiGlobals.h
gui/CoreExtension/src/: GuiGlobals.cpp  GuiModManager.cpp
gui/GameBrowser/: CMakeLists.txt
gui/GameBrowser/include/: TabGeneralSettings.h
gui/GameBrowser/src/: TabAbout.cpp
gui/ModBrowser/: CMakeLists.txt
gui/ModBrowser/include/: FrameModBrowser.h  PopupApplyMod.h  TabModBrowser.h  TabModOptions.h  TabModPresets.h  ThumbnailPresetEditor.h
gui/ModBrowser/src/: FrameModBrowser.cpp  TabModBrowser.cpp  TabModPlugins.cpp  TabModPresets.cpp
gui/include/: application.h  application_handler.h  main_application.h  main_layout.h  render_handler.h  tab_about.h  tab_browser.h  thumbnail_mod_browser.h
gui/include/core_extension/: GuiGlobals.h  GuiModManager.h  ext_GlobalObjects.h  ext_mod_manager.h  ext_toolbox.h
gui/include/draw/: color.h  display_element.h  rectangle.h  test_block.h
gui/include/game_browser/: TabAbout.h  TabGames.h  TabGeneralSettings.h  frame_root.h  tab_games.h  tab_general_settings.h  tab_test.h
gui/include/mod_browser/: FrameModBrowser.h  PopupLoading.h  TabModBrowser.h  TabModPlugins.h  TabModPresets.h  ThumbnailPresetEditor.h  frame_mod_browser.h  frame_mods_browser.h  popup_apply_mod.h  popup_loading.h  tab_mod_browser.h  tab_mod_options.h  tab_mod_plugins.h  tab_mod_presets.h  tab_mods.h  thumbnail_preset_editor.h
gui/include/off/: application.h  application_handler.h  render_handler.h
gui/include/off/draw/: display_element.h  rectangle.h  test_block.h
gui/source/: application.cpp  application_handler.cpp  main.cpp  main_application.cpp  main_layout.cpp  render_handler.cpp  tab_about.cpp  tab_browser.cpp  thumbnail_mod_browser.cpp
gui/source/core_extension/: GuiGlobals.cpp  GuiModManager.cpp  ext_GlobalObjects.cpp  ext_mod_manager.cpp  ext_toolbox.cpp
gui/source/draw/: color.cpp  display_element.cpp  rectangle.cpp  test_block.cpp
gui/source/game_browser/: FrameRoot.cpp  TabAbout.cpp  TabGames.cpp  TabGeneralSettings.cpp  frame_root.cpp  tab_about.cpp  tab_games.cpp  tab_general_settings.cpp  tab_test.cpp
gui/source/mod_browser/: FrameModBrowser.cpp  PopupApplyMod.cpp  PopupLoading.cpp  TabModBrowser.cpp  TabModOptions.cpp  TabModPlugins.cpp  TabModPresets.cpp  ThumbnailPresetEditor.cpp  frame_mod_browser.cpp  frame_mods_browser.cpp  popup_apply_mod.cpp  popup_loading.cpp  tab_mod_browser.cpp  tab_mod_options.cpp  tab_mod_plugins.cpp  tab_mod_presets.cpp  tab_mods.cpp  thumbnail_preset_editor.cpp
gui/source/off/: application_handler.cpp  main_layout.cpp  render_handler.cpp
gui/source/off/draw/: display_element.cpp  rectangle.cpp  test_block.cpp
include/: GlobalObjects.h  browser.h  mod_browser.h  mod_manager.h  mods_preseter.h  parameters_handler.h  selector.h  toolbox.h
ovl/: CMakeLists.txt
ovl/include/: ChangeConfigPresetGui.h  GameBrowserGui.h  ModBrowserGui.h
ovl/source/: ChangeConfigPresetGui.cpp  GameBrowserGui.cpp  ModBrowserGui.cpp  main.cpp
resources/: icon_corner.psd  icon_gui.psd
shortcuts/: libretro-common  nanovg
source/: CMakeLists.txt  GlobalObjects.cpp  browser.cpp  main.cpp  mod_browser.cpp  mod_manager.cpp  mods_preseter.cpp  parameters_handler.cpp  selector.cpp  toolbox.cpp
src/: CMakeLists.txt
src/Applications/SimpleModManager/: CMakeLists.txt
src/Applications/SimpleModManager/include/: SimpleModManager.h
src/Applications/SimpleModManager/src/: SimpleModManager.cpp
src/Applications/SimpleModManagerConsole/: CMakeLists.txt
src/Applications/SimpleModManagerConsole/src/: SimpleModManagerConsole.cpp
src/Applications/SimpleModManagerOverlay/: CMakeLists.txt
src/Applications/SimpleModManagerOverlay/include/: ExampleGui.h  GameBrowserGui.h  OverlayGuiLoader.h
src/Applications/SimpleModManagerOverlay/include/implementation/: GameBrowserGui.impl.h  OverlayGui.impl.h
src/Applications/SimpleModManagerOverlay/src/: SimpleModManagerOverlay.cpp
src/ModManagerCore/: CMakeLists.txt
src/ModManagerCore/include/: ConfigHandler.h  ConsoleHandler.h  GameBrowser.h  GlobalObjects.h  ModBrowser.h  ModManager.h  ModsPresetHandler.h  Selector.h  Toolbox.h
src/ModManagerCore/src/: ConfigHandler.cpp  GameBrowser.cpp  GlobalObjects.cpp  ModBrowser.cpp  ModManager.cpp  ModsPreseter.cpp  Selector.cpp  Toolbox.cpp
src/ModManagerGui/CoreExtension/: CMakeLists.txt
src/ModManagerGui/CoreExtension/include/: GuiModManager.h  GuiUtils.h  ModManagerUtils.h  PopupLoading.h  PopupLoadingBox.h  PopupLoadingView.h  SystemStatusOverlay.h
src/ModManagerGui/CoreExtension/src/: GuiModManager.cpp  PopupLoadingBox.cpp  PopupLoadingView.cpp  SystemStatusOverlay.cpp
src/ModManagerGui/FrameGameBrowser/: CMakeLists.txt
src/ModManagerGui/FrameGameBrowser/include/: FrameRoot.h  ModsMtpServer.h  TabAbout.h  TabGames.h  TabGeneralSettings.h  TabImportMod.h
src/ModManagerGui/FrameGameBrowser/src/: FrameRoot.cpp  ModsMtpServer.cpp  TabAbout.cpp  TabGames.cpp  TabGeneralSettings.cpp  TabImportMod.cpp
src/ModManagerGui/FrameModBrowser/: CMakeLists.txt
src/ModManagerGui/FrameModBrowser/include/: FrameModBrowser.h  TabModBrowser.h  TabModOptions.h  TabModPlugins.h  TabModPresets.h  ThumbnailPresetEditor.h
src/ModManagerGui/FrameModBrowser/src/: FrameModBrowser.cpp  PopupApplyMod.cpp  TabModBrowser.cpp  TabModOptions.cpp  TabModPlugins.cpp  TabModPresets.cpp  ThumbnailPresetEditor.cpp
src/ModManagerOverlay/: CMakeLists.txt
src/ModManagerOverlay/src/: ChangeConfigPresetGui.cpp  ModBrowserGui.cpp
submodules/: placeholder.txt
test/: CMakeLists.txt  Makefile
test/source/: main.cpp
(+30 files in other folders)
